# ai_operations

./: .clinerules  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .htmlhintignore  .htmlhintrc  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE_GETTING_STARTED.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  README_NPM_CACHE.md  SECURITY.md  ai_operations.code-workspace  conftest.py  constraints.txt  env_setup  license-report.csv  mypy.ini  pyproject.toml  pytest.ini  requirements-all-no-llm-guard.txt  requirements-all.txt  requirements-ops.txt
.claude/: settings.json
.cursor/: README.md
.cursor/agents/: documentation-drift.md  plans.md  second-opinion.md  verifier.md
.cursor/commands/: commit-code.md  execute-task.md  find-next-task.md  production-ready.md  reminders.md  update-plans.md
.cursor/context/: testing-context.md
.cursor/memory/: testing-memory.md
.cursor/rules/: accessibility-guidelines.mdc  angular-general.mdc  angular-template-hints.mdc  angular-testing-guidelines.mdc  documentation-organization.mdc  general-reasoning.mdc  performance-optimization.mdc  python-venv.mdc  testing-rules.md
.cursor/workflows/: testing-workflow.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  license-scan.yml
.qodo/: testConfig.toml
backups/deploy/: docker-compose.yml
config/: make.local.mk.template
config/env/: env.template  env.test.template
config/models/: model_metadata.template.yaml
config/secrets/: README.md  netrc.example  npmrc.example
deploy/: docker-compose.full.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
docs/: PROJECT_OVERVIEW.md  README.md
docs/admin/: PRICING_MANAGEMENT.md  USER_ROLES_GUIDE.md
docs/api/: admin_pricing.md  authentication.md  capabilities.md  collection-management.md  config-public.md  conversations.md  corpus-management.md  documents.md  embedding-service.md  pricing-management.md  run-manifests.md  summaries.md  template-management.md  tools-registration-api.md  use-case-execution.md  use-case-management.md
docs/architecture/: BACKEND_ARCHITECTURE_SPEC.md  CONSISTENCY_MODEL.md  DEPLOYMENT_CONSTRAINTS.md  RAG_Architecture.md  SHARED_PROVIDER_MODELS.md  TOOLS_ARCHITECTURE_DIAGRAMS.md  TOOL_ALLOWLIST_USAGE.md  authentication_patterns.md  cross_cutting_concerns.md  data_volume_structure.md  intent_routing_components.md  observability_patterns.md
docs/demo/: DEMO_CREDENTIALS.md  DEMO_TEST_SCENARIOS.md
docs/deployment/: V1_DEPLOYMENT_CHECKLIST.md
docs/development/: FEATURE_IMPLEMENTATION_PROMPT_V1.md  MODEL_SELECTION_GUIDE.md  SECURITY_REMEDIATION_HANDOFF.md  TASK_STATUS_CONVENTIONS.md  VERIFICATION_REPORT_2025-11-02.md
docs/operations/: AIR_GAPPED_DEPLOYMENT.md
docs/testing/: CLEANUP_SUMMARY.md  PHASE_2.7_TEST_RESULTS.md  PORT_MANAGEMENT.md  REORGANIZATION_SUMMARY.md  SCRIPT_INDEX.md  TESTING_GUIDE.md  TEST_DATABASE_SETUP.md  TEST_ENVIRONMENT_SETUP.md  TROUBLESHOOTING.md  WIZARD_INTEGRATION_TEST.md
docs/user-guides/: GLOSSARY.md  QUERY_DEVELOPER_TOOLS.md  STRUCTURED_OUTPUT_GUIDE.md  STRUCTURED_OUTPUT_QUICKSTART.md  admin-tool-registration.md  collection-management-guide.md  system-configuration-guide.md  use-case-validation.md
ops/: README.md  README_enhanced_pipeline_fix.md  analytics_queries.sql  check_db_objects.py  demonstrate_enhanced_pipeline_fixed.py  demonstrate_stateless_core_v1.py  external_demo.py  extract_pdf_metadata.py  mock_streaming_test.py  run_retrieval_tests.py  test_config_system.py  test_openai_key.py  test_streaming_only.py  validate_configuration.py
ops/bootstrap/: README_NPM_CACHE.md  build_llm_guard.sh  build_llm_guard.sh.bak  build_npm_cache_linux.sh  build_wheelhouse.sh  check_outdated_packages.sh  download_embedding_models.py  download_llm_guard_models.py  prepare_tokenizers.sh  up.sh
ops/ci/: build_images.sh  scan_images.sh
ops/cli/: configure_llm_guard.py  run_integration_tests.sh  verify_mypy.sh
ops/database/: APPLY_PROVIDER_FIX.sh  APPLY_PROVIDER_FIX_DOCKER.sh  Dockerfile  INDEX.md  MIGRATION_SUMMARY.md  README.md  SEED_VISUALIZATION_AIOPS_SUMMARY.md  init_db.py  init_entrypoint.sh  run_migrations.sh  schema_verification.md  seed_intent_defaults_from_env.py  test_seed_visualizations.md
ops/operations/: rebuild_retrieval_service.sh  reset_and_migrate_test_db.sh  reset_datastores.py  reset_demo_database.sh  restart_llm_guard.sh  run_rag_services.sh  verify_demo_setup.sh
ops/testing/: README.md  clean_test_environment.sh  fix_db_connection.py  (+34 more)
src/: .dockerignore  run_tests.v2.sh
src/llm_guard_svc/: Dockerfile  Dockerfile.pipBuild  README.md  app.py  pyproject.toml  requirements-models.txt  requirements.txt
src/llm_guard_svc/app/: __init__.py  guard.py  main.py
src/llm_guard_svc/app/scanners/: __init__.py  _gliner_recognizer.py  _onnx_classifier.py  _pii_common.py  anonymize_scanner.py  gibberish_scanner.py  language_scanner.py  prompt_injection_scanner.py  regex_scanner.py  secrets_scanner.py
src/llm_guard_svc/app/scanners/secrets_plugins/: PROVENANCE.md  sidekiq.py
src/llm_guard_svc/app/utils/: __init__.py  auth.py
src/llm_guard_svc/tests/: test_cutover_fixes.py  test_dependency_debug.py  test_dependency_fix.py  test_engine_config.py  test_engine_selection.py  test_fastapi_schema_debug.py  test_find_conflicts.py  test_isolated_debug.py  test_llm_guard.py  test_path_resolution.py  test_route_inspection.py  test_validation_endpoint.py
src/llm_guard_svc/tests/parity/: README.md  __init__.py  capture.py  client.py  compare.py  corpus.py  pii_labelled.py  pii_metrics.py  schema.py  test_onnx_logic.py  test_onnx_parity.py  test_parity.py  test_pii_golden_divergence.py  test_pii_logic.py  test_pii_metrics_container.py  test_scanner_parity.py  test_secrets_temp_cleanup.py
src/llm_guard_svc/tests/parity/golden/: baseline.json  latency.json
tests/: README.md  conftest.py
(+1391 files in other folders)
