[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-guard-svc"
version = "0.1.0"
description = "LLM Guard Service — native ML scanner stack (AIO)"
requires-python = ">=3.11,<3.13"

# Runtime dependencies — kept in sync with requirements.txt.
# This pyproject.toml + uv.lock exist so Dependabot can determine the exact
# pinned versions and create automated security PRs (AIO-77 lockfile fix).
dependencies = [
    # Web framework
    "fastapi>=0.117.1",
    "uvicorn==0.49.0",
    "starlette>=1.2.0",
    "pydantic>=2.12.5,<3.0.0",
    "python-json-logger==4.1.0",
    "httpx>=0.28.1",
    "cachetools>=7.1.4,<8.0.0",

    # ML stack — transformers >=5.0.0 closes CVE-2026-1839 (Dependabot alert 160).
    # Bounded <5.2.0 by gliner==0.2.26; lifting requires a gliner upgrade.
    # optimum[onnxruntime] removed (AIO-77): classifiers use InferenceSession directly.
    "torch>=2.4.0",
    "transformers[torch]>=5.0.0,<5.13.0",
    "onnxruntime>=1.26.0",
    # Explicit floor — closes 6 Dependabot onnx CVEs (alerts 153-157, 159), all patched in onnx>=1.21.0.
    "onnx>=1.21.0",
    "regex>=2026.5.9",
    "sentencepiece>=0.2.1",

    # Native scanner stack
    "bc-detect-secrets==1.5.47",
    "presidio-anonymizer==2.2.362",

    # PII stack
    "presidio-analyzer==2.2.362",
    "gliner==0.2.26",

    # spaCy — thinc 8.2.x (required by spacy 3.7.x) pins numpy<2.0.0
    "spacy>=3.7.2,<3.9.0",
    "spacy-pkuseg>=1.0.1,<1.1.0",
    "numpy>=1.19.0,<3.0.0",

    "typing-extensions>=4.15.0,<5.0.0",
    # Explicit floor — closes Dependabot cryptography CVEs (alerts 152, 154), patched in >=46.0.5.
    "cryptography>=48.0.0",

    # Instrumentation
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
    "opentelemetry-instrumentation-requests==0.63b1",
    "opentelemetry-instrumentation-sqlalchemy==0.63b1",
    "prometheus-client==0.25.0",
]
